[project]
name = "nonebot-plugin-dailynews"
version = "0.1.0"
description = "NoneBot2 plugin for fetching and sending daily news."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nonebot2>=2.0.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "apscheduler>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/WesternLi/nonebot-plugin-dailynews"

[tool.nonebot]
plugins = ["nonebot_plugin_dailynews"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
